# moleculariq-core

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/moleculariq_core/: __init__.py
src/moleculariq_core/rewards/: __init__.py  count_reward.py  index_reward.py
tests/: __init__.py  conftest.py
tests/edge_cases/: __init__.py  test_invalid_inputs.py
tests/integration/: __init__.py  test_workflows.py
tests/regression/: __init__.py  test_known_molecules.py  test_pinned_values.py
tests/unit/: __init__.py  test_constraint_operators.py  test_data_loading.py  test_formatter_parsing.py  test_functional_groups.py  test_llm_output_parsing.py  test_mappings.py  test_moleculariqd.py  test_nlp.py  test_nlp_reproducibility.py  test_parametrized_properties.py  test_properties.py  test_property_solver_mapping.py  test_questions.py  test_rewards.py  test_solver.py  test_template_reactions.py
